--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest, ubuntu-22.04]
+        include:
+          - os: macos-latest
+            os_name: macos
+          - os: ubuntu-22.04
+            os_name: linux
+          - os: windows-latest
+            os_name: windows
 
     steps:
       - uses: actions/checkout@v3
@@ -31,5 +37,5 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: packwize-${{ matrix.os }}
+          name: packwize-${{ matrix.os_name }}
           path: dist/packwize*
