--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           python-version: "3.13.5"
 
+      - name: Install certifi
+        run: pip install --upgrade certifi
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
