--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,16 +7,8 @@
     "**/Thumbs.db": true,
     "/LICENSE": true,
     ".gitattributes": true,
-    "LICENSE": true,
     ".vscode": true,
-    "build": true,
     ".gitignore": true
   },
-  "hide-files.files": [
-    ".gitattributes",
-    "LICENSE",
-    ".vscode",
-    "build",
-    ".gitignore"
-  ]
+  "hide-files.files": [".gitattributes", ".vscode", ".gitignore"]
 }
